--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,8 @@
     <property name="cii.version" value="D16B"/>
     <property name="cii.schema.zip" value="D16B_SCRDM__Subset__CII.zip"/>
     <property name="cii.schema.uncoupled.zip" value="d16b-cii-uncoupled.zip"/>
-    <property name="cii.download.url" value="http://www.unece.org/fileadmin/DAM/cefact/xml_schemas/${cii.schema.zip}"/>
+    <property name="cii.download.url"
+        value="http://www.unece.org/fileadmin/DAM/cefact/xml_schemas/${cii.schema.zip}"/>
     <property name="ubl.version" value="2.1"/>
     <property name="ubl.download.url.prefix"
         value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}/"/>
@@ -69,7 +70,8 @@
             <local name="schematron.basename"/>
             <basename file="@{schematron}" suffix="@{insuffix}" property="schematron.basename"/>
 
-            <echo message="Compiling '@{schematron}' Schematron with basename='${schematron.basename}'"/>
+            <echo
+                message="Compiling '@{schematron}' Schematron with basename='${schematron.basename}'"/>
             <mkdir dir="@{workdir}"/>
 
             <tempfile property="expanded.sch" prefix="expanded" suffix=".sch" destdir="@{workdir}"
@@ -101,19 +103,22 @@
             </xslt>
 
             <!-- expand abstract patterns -->
-            <xslt style="@{workdir}/iso_abstract_expand.xsl" in="@{workdir}/${schematron.basename}-expanded.sch"
+            <xslt style="@{workdir}/iso_abstract_expand.xsl"
+                in="@{workdir}/${schematron.basename}-expanded.sch"
                 out="@{workdir}/${schematron.basename}-unabstract.sch" classpath="@{saxon.jar}">
                 <factory name="net.sf.saxon.TransformerFactoryImpl"/>
             </xslt>
             <!-- svrl it -->
             <xslt style="@{workdir}/iso_svrl_for_@{schematronbinding}.xsl"
-                in="@{workdir}/${schematron.basename}-unabstract.sch" out="@{outdir}/${schematron.basename}.xslt"
-                classpath="@{saxon.jar}">
+                in="@{workdir}/${schematron.basename}-unabstract.sch"
+                out="@{outdir}/${schematron.basename}.xslt" classpath="@{saxon.jar}">
                 <factory name="net.sf.saxon.TransformerFactoryImpl"/>
                 <param name="generate-fired-rule" expression="false"/>
                 <param name="full-path-notation" expression="3"/>
             </xslt>
-            <echo message="finished schematron compile output to @{outdir}/${schematron.basename}.xslt"/>
+            <echo
+                message="finished schematron compile output to @{outdir}/${schematron.basename}.xslt"
+            />
         </sequential>
     </macrodef>
 
@@ -130,7 +135,8 @@
             <format property="build.date" pattern="yyyy-MM-dd"/>
         </tstamp>
 
-
+        <!-- Determine presence of a translation file to conditionally execute translate-cen-rules task -->
+        <available file="${src.dir}/translations/xrechnung-schematron-translations.xml" property="translation.avalailable"/>
 
         <echo>Build date: ${build.date}</echo>
         <!-- Create the build directory structure used by compile -->
@@ -169,34 +175,6 @@
         description="Download CEN business rules (schematron) to download directory">
         <get src="${cen.download.url}" dest="${download.dir}" verbose="true" skipexisting="true"
             usetimestamp="true"/>
-    </target>
-    <target name="retrieve-xrechnung-rules" depends="init"
-        description="Download XRechnung business rules (schematron) to download directory">
-        <get src="${xrechnung.download.url}" dest="${download.dir}" verbose="true"
-            skipexisting="true" usetimestamp="true"/>
-    </target>
-    <target name="retrieve-ubl-schema" depends="init"
-        description="Download UBL schemas to download directory">
-        <get src="${ubl.download.url}" dest="${download.dir}" verbose="true" skipexisting="true"
-            usetimestamp="true"/>
-    </target>
-    <target name="retrieve-cii-schema" depends="init"
-        description="Download UN/CEFACT CII schemas to download directory">
-        <get src="${cii.download.url}"
-            dest="${download.dir}" verbose="true" skipexisting="true" usetimestamp="true"/>
-        <unzip src="${download.dir}/${cii.schema.zip}" dest="${download.dir}">
-            <patternset>
-                <include name="**/D16B*uncoupled.zip"/>
-            </patternset>
-            <mergemapper to="${cii.schema.uncoupled.zip}"/>
-        </unzip>
-    </target>
-    <target name="retrieve-all-schema-rules"
-        depends="retrieve-ubl-schema,retrieve-cen-rules,retrieve-xrechnung-rules,retrieve-cii-schema"
-        description="Retrieves all 3rd party XSDs and XSLTs"/>
-
-
-    <target name="compile-cen-rules" depends="retrieve-cen-rules,prepare-saxon">
         <unzip src="${download.dir}/${cen.rules.zip}" dest="${download.dir}">
             <patternset>
                 <include name="*/ubl/schematron/**/*.sch"/>
@@ -225,7 +203,59 @@
                 </not>
             </condition>
         </fail>
+    </target>
 
+    <target name="retrieve-xrechnung-rules" depends="init"
+        description="Download XRechnung business rules (schematron) to download directory">
+        <get src="${xrechnung.download.url}" dest="${download.dir}" verbose="true"
+            skipexisting="true" usetimestamp="true"/>
+    </target>
+
+    <target name="retrieve-ubl-schema" depends="init"
+        description="Download UBL schemas to download directory">
+        <get src="${ubl.download.url}" dest="${download.dir}" verbose="true" skipexisting="true"
+            usetimestamp="true"/>
+    </target>
+    
+    <target name="retrieve-cii-schema" depends="init"
+        description="Download UN/CEFACT CII schemas to download directory">
+        <get src="${cii.download.url}" dest="${download.dir}" verbose="true" skipexisting="true"
+            usetimestamp="true"/>
+        <unzip src="${download.dir}/${cii.schema.zip}" dest="${download.dir}">
+            <patternset>
+                <include name="**/D16B*uncoupled.zip"/>
+            </patternset>
+            <mergemapper to="${cii.schema.uncoupled.zip}"/>
+        </unzip>
+    </target>
+    
+    <target name="retrieve-all-schema-rules"
+        depends="retrieve-ubl-schema,retrieve-cen-rules,retrieve-xrechnung-rules,retrieve-cii-schema"
+        description="Retrieves all 3rd party XSDs and XSLTs"/>
+
+    <target name="translate-schematron-rules" depends="retrieve-cen-rules,prepare-saxon" if="translation.avalailable">
+        
+        <xslt extension=".sch.tr" useimplicitfileset="false" failonerror="true" failonnoresources="true"
+            failontransformationerror="true"
+            style="${src.dir}/translations/schematron-assert-message-translator.xsl"
+            destdir="${download.dir}">
+            <classpath location="${lib.dir}/${saxon.jar}"/>
+            <factory name="net.sf.saxon.TransformerFactoryImpl"/>
+            <fileset dir="${download.dir}" casesensitive="yes">
+                <include name="*/*/schematron/*/*.sch"/>
+            </fileset>
+        </xslt>
+        
+        <move todir="${download.dir}" includeemptydirs="false">
+            <fileset dir="${download.dir}">
+                <include name="*/*/schematron/*/*.sch.tr"/>
+            </fileset>
+            <mapper type="glob" from="*.sch.tr" to="*.sch"/>
+        </move>
+
+    </target>
+
+    <target name="compile-cen-rules" depends="retrieve-cen-rules,translate-schematron-rules,prepare-saxon">
 
         <schematron-compile
             schematron="${download.dir}/validation-master/ubl/schematron/EN16931-UBL-model.sch"
@@ -267,7 +297,7 @@
 
     <target name="compile"
         depends="compile-scenario,retrieve-all-schema-rules,compile-cen-rules,prepare-saxon,prepare-validationtool"
-        description="Compile XSDs and XSLTs into validation configuration conformat repository directory">
+        description="Compile XSDs and XSLTs into validation configuration conformant repository directory">
         <echo>Compiling Schemas and XSLTs ...</echo>
 
 
@@ -299,8 +329,8 @@
             </patternset>
             <flattenmapper/>
         </unzip>
-
     </target>
+
     <target name="init-test" depends="init, compile-scenario"
         description="Initializes test directory structure">
         <mkdir dir="${build.dir}/test"/>
@@ -345,6 +375,18 @@
             destfile="${dist.dir}/validator-configuration-xrechnung_${xrechnung.version}_${build.date}.zip"
             basedir="${build.dir}" excludes="download/**,test,schematron"/>
     </target>
+    
+    <target name="clean-but-download" description="clean up">
+        <!-- Delete the ${build} and ${dist} directory trees -->
+        <delete  verbose="true" includeEmptyDirs="true" >
+            <fileset dir="${build.dir}">
+                <exclude name="download"/>
+            </fileset>
+        </delete>
+        <delete dir="${dist.dir}"/>
+        <delete dir="${reports.dir}"/>
+    </target>
+    
     <target name="clean" description="clean up">
         <!-- Delete the ${build} and ${dist} directory trees -->
         <delete dir="${build.dir}" verbose="true" includeEmptyDirs="true"/>
