--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
     value="${xrechnung.spec.id}#conformant#urn:xeinkauf.de:kosit:extension:xrechnung_${xrechnung.version.major.minor}" />
   <property name="xrechnung.cvd.version.major.minor" value="0.9" />
   <property name="xrechnung.cvd.id"
-            value="${xrechnung.spec.id}#compliant#urn:xeinkauf.de:kosit:cvd:xrechnung_${xrechnung.cvd.version.major.minor}" />
+    value="${xrechnung.spec.id}#compliant#urn:xeinkauf.de:kosit:xrechnung:cvd_${xrechnung.cvd.version.major.minor}" />
 
   <property name="validator.configuration.version.full" value="2025-06-30-SNAPSHOT" />
   <property name="dist.name"
