--- a/build.xml
+++ b/build.xml
@@ -27,6 +27,9 @@
     value="${cen.spec.id}#compliant#urn:xeinkauf.de:kosit:xrechnung_${xrechnung.version.major.minor}" />
   <property name="xrechnung.extension.id"
     value="${xrechnung.spec.id}#conformant#urn:xeinkauf.de:kosit:extension:xrechnung_${xrechnung.version.major.minor}" />
+  <property name="xrechnung.cvd.version.major.minor" value="0.9" />
+  <property name="xrechnung.cvd.id"
+    value="${xrechnung.spec.id}#compliant#urn:xeinkauf.de:kosit:xrechnung:cvd_${xrechnung.cvd.version.major.minor}" />
 
   <property name="validator.configuration.version.full" value="2025-06-30-SNAPSHOT" />
   <property name="dist.name"
@@ -64,7 +67,7 @@
     value="${ubl.download.url.prefix}/${ubl.schema.zip}" />
 
   <!-- set to "master" if you want latest code -->
-  <property name="cen.rules.version" value="1.3.13" />
+  <property name="cen.rules.version" value="1.3.14.2" />
   <property name="cen.rules.version.download" value="${cen.rules.version}" />
   <property name="cen.download.url.owner" value="ConnectingEurope" />
   <property name="cen.download.url.prefix"
@@ -469,6 +472,7 @@
     <filter token="xrechnung.version" value="${xrechnung.version}" />
     <filter token="xrechnung.spec.id" value="${xrechnung.spec.id}" />
     <filter token="xrechnung.extension.id" value="${xrechnung.extension.id}" />
+    <filter token="xrechnung.cvd.id" value="${xrechnung.cvd.id}" />
     <filter token="ubl.version" value="${ubl.version}" />
     <filter token="ubl.download.url" value="${ubl.download.url}" />
     <filter token="cii.version" value="${cii.version}" />
@@ -616,6 +620,7 @@
   </target>
 
   <target name="retrieve-xmute" depends="init">
+    <property name="xmute.download.url.prefix" value="file:///C:/Users/PeepoShy/IdeaProjects/xml-mutate" />
     <fail unless="xmute.download.url.prefix"
       message="Property xmute.download.url.prefix must exist for this target to work" />
     <property name="xmute.version.full" value="0.5" />
@@ -624,15 +629,10 @@
       dest="${lib.dir}/${xmute.jar}" verbose="true" skipexisting="false" usetimestamp="true" />
   </target>
 
-
-
-
-
   <target name="test-cen-expected-behaviour" depends="compile, init-test, retrieve-xmute"
     description="Test Schematron Rules with XML-Mutate" if="xmute.download.url.prefix">
     <echo>Generate and test instances with expected behaviour ...</echo>
     <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
-
       <arg value="--schematron" />
       <arg value="xrubl=${resource.xsl.xr.ubl}" />
       <arg value="--schematron" />
@@ -643,7 +643,6 @@
       <arg value="${test.docs.cen.unit.dir}" />
     </java>
   </target>
-
 
   <target name="test-integration" depends="init-test, provide-validator, provide-testsuite, test-cen-expected-behaviour, test-integration-only" 
     description="Integration testing result of XRechnung Configuration"></target>
@@ -670,7 +669,6 @@
     <copy todir="${test.docs.integration.dir}" verbose="true">
       <fileset dir="${test.docs.cen.unit.dir}">
         <include name="cii-br-s-08-rounding-rule.xml"/>
-        <include name="ubl-br-dex-2-false-negative.xml"/>
         <include name="cii-bt-20-cardinality-check.xml"/>
         <include name="cii-bt-20-cardinality-check-2.xml"/>
         <include name="cii-cii-sr-454-negative-test.xml"/>
