--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
   <property name="xrechnung.cvd.id"
     value="${xrechnung.spec.id}#compliant#urn:xeinkauf.de:kosit:xrechnung:cvd_${xrechnung.cvd.version.major.minor}" />
 
-  <property name="validator.configuration.version.full" value="2025-06-30-SNAPSHOT" />
+  <property name="validator.configuration.version.full" value="2025-07-10" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
   <!-- 3rd party resources -->
@@ -80,7 +80,7 @@
 
 
   <!-- XRechnung Schematron Rules section -->
-  <property name="xr.schematron.version.major.minor" value="2.3" />
+  <property name="xr.schematron.version.major.minor" value="2.4" />
   <property name="xr.schematron.version.patch" value="0" />
   <property name="xr.schematron.version.full"
     value="${xr.schematron.version.major.minor}.${xr.schematron.version.patch}" />
@@ -91,7 +91,7 @@
     value="xrechnung-${xrechnung.version}-schematron-${xr.schematron.version.full}.zip" />
   <property name="xr.schematron.download.url" value="${xr.schematron.download.url.prefix}/${xr.schematron.zip}" />  
 
-  <property name="xr.testsuite.version" value="2025-03-21" />
+  <property name="xr.testsuite.version" value="2025-07-10" />
   <property name="xr.testsuite.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-testsuite/releases/download" />
 
